--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(dplyr,mutate)
 importFrom(e1071,svm)
+importFrom(golem,with_golem_options)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(graphics,legend)
