--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R:
     role = "aut",
     email = "kazim.arga@marmara.edu.tr"))      
 Depends: R(>= 4.2), shiny (>= 1.7.3)
-Imports: rstudioapi (>= 0.14),nortest (>= 1.0-4), e1071 (>= 1.7-11), BSDA (>=
+Imports: rstudioapi (>= 0.14),golem (>= 0.3.5) ,nortest (>= 1.0-4), e1071 (>= 1.7-11), BSDA (>=
         1.2.1),data.table (>= 1.14.2), sjmisc (>= 2.8.9), klaR (>=
         1.7-1), caTools (>= 1.18.2),caret (>= 6.0-93), survival (>= 3.4-0),
 		DOSE (>= 3.22.1) , AnnotationDbi (>= 1.58.0), org.Hs.eg.db (>= 3.15.0),
