--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(klaR,greedy.wilks)
 importFrom(nortest,ad.test)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
 importFrom(rstudioapi,selectDirectory)
+importFrom(shinytitle,use_shiny_title)
 importFrom(sjmisc,str_contains)
 importFrom(stats,median)
 importFrom(stats,na.omit)
