--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,12 +15,13 @@ Authors@R:
     family = "Arğa",
     role = "aut",
     email = "kazim.arga@marmara.edu.tr"))      
-Depends: R(>= 4.2), shiny (>= 1.7.3)
-Imports: rstudioapi (>= 0.14), golem (>= 0.3.5), nortest (>= 1.0-4), e1071 (>= 1.7-11), BSDA (>=
-        1.2.1),data.table (>= 1.14.2), sjmisc (>= 2.8.9), klaR (>=
-        1.7-1), caTools (>= 1.18.2),caret (>= 6.0-93), survival (>= 3.4-0),
-		DOSE (>= 3.22.1) , AnnotationDbi (>= 1.58.0), org.Hs.eg.db (>= 3.15.0),
-		dplyr (>= 1.0.10),grDevices, graphics, stats, utils
+Depends: R(>= 4.2), shiny (>= 1.7.4)
+Imports: rstudioapi (>= 0.14), shinytitle (>= 0.1.0) ,golem (>= 0.3.5), 
+        nortest (>= 1.0-4), e1071 (>= 1.7-12), BSDA (>= 1.2.1),
+        data.table (>= 1.14.6), sjmisc (>= 2.8.9), klaR (>= 1.7-1), 
+        caTools (>= 1.18.2),caret (>= 6.0-93), survival (>= 3.4-0), 
+        DOSE (>= 3.24.2) , AnnotationDbi (>= 1.60.0), org.Hs.eg.db (>= 3.16.0),
+        dplyr (>= 1.0.10),grDevices, graphics, stats, utils
 Description: It is an easy-to-use GUI using disease information for detecting tumor/normal sample 
     discriminating gene sets from differentially expressed genes. Our approach is based on an 
     iterative algorithm filtering genes with disease ontology enrichment analysis and wilk’s lambda 
@@ -36,7 +37,7 @@ RoxygenNote: 7.2.3
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.1.6)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 BugReports: https://github.com/robogeno/SVMDO/issues
