--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,8 @@ importFrom(graphics,mtext)
 importFrom(klaR,greedy.wilks)
 importFrom(nortest,ad.test)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
-importFrom(rstudioapi,selectDirectory)
+importFrom(shinyFiles,shinyDirButton)
+importFrom(shinyFiles,shinyDirChoose)
 importFrom(shinytitle,use_shiny_title)
 importFrom(sjmisc,str_contains)
 importFrom(stats,median)
