--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R:
     role = "aut",
     email = "kazim.arga@marmara.edu.tr"))      
 Depends: R(>= 4.2), shiny (>= 1.7.4)
-Imports: rstudioapi (>= 0.14), shinytitle (>= 0.1.0) ,golem (>= 0.3.5), 
+Imports: shinyFiles (>= 0.9.3), shinytitle (>= 0.1.0), golem (>= 0.3.5), 
         nortest (>= 1.0-4), e1071 (>= 1.7-12), BSDA (>= 1.2.1),
         data.table (>= 1.14.6), sjmisc (>= 2.8.9), klaR (>= 1.7-1), 
         caTools (>= 1.18.2),caret (>= 6.0-93), survival (>= 3.4-0), 
