--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ import(shiny)
 importFrom(AnnotationDbi,select)
 importFrom(BSDA,z.test)
 importFrom(DOSE,enrichDO)
+importFrom(SummarizedExperiment,assay)
 importFrom(caTools,sample.split)
 importFrom(caret,confusionMatrix)
+importFrom(data.table,first)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(dplyr,mutate)
@@ -19,6 +21,7 @@ importFrom(graphics,mtext)
 importFrom(klaR,greedy.wilks)
 importFrom(nortest,ad.test)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
+importFrom(shinyFiles,getVolumes)
 importFrom(shinyFiles,shinyDirButton)
 importFrom(shinyFiles,shinyDirChoose)
 importFrom(shinytitle,use_shiny_title)
@@ -32,6 +35,7 @@ importFrom(stats,sd)
 importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
+importFrom(survival,survdiff)
 importFrom(survival,survfit)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
