--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(dplyr,mutate)
 importFrom(e1071,svm)
+importFrom(e1071,tune.svm)
 importFrom(golem,with_golem_options)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
