--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,45 +1,33 @@
 Package: SVMDO
 Title: Identification of Tumor-Discriminating mRNA Signatures via Support Vector Machines Supported by Disease Ontology
-Version: 1.1.2
-Date: 2023-09-24
+Version: 1.1.3
+Date: 2023-12-27
 Authors@R: 
     c(person(given = "Mustafa Erhan",
-	family = "Özer",
+	family = "Ozer",
     role = c("aut","cre"),
     comment = c(ORCID = "0000-0002-1572-8008"),
     email = "erhanozer19@marun.edu.tr"),
     person(given = "Pemra",
-    family = "Özbek Sarıca",
+    family = "Ozbek Sarica",
     role = "aut",
     email = "pemra.ozbek@marmara.edu.tr"),
-    person(given = "Kazım Yalçın",
-    family = "Arğa",
+    person(given = "Kazim Yalcin",
+    family = "Arga",
     role = "aut",
     email = "kazim.arga@marmara.edu.tr"))      
 Depends: R(>= 4.3), shiny (>= 1.7.4)
-Imports: shinyFiles (>= 0.9.3), shinytitle (>= 0.1.0), golem (>= 0.3.5), 
+Imports: shinyFiles (>= 0.9.3), shinytitle (>= 0.1.0), golem (>= 0.3.5),
         nortest (>= 1.0-4), e1071 (>= 1.7-12), BSDA (>= 1.2.1),
         data.table (>= 1.14.6), sjmisc (>= 2.8.9), klaR (>= 1.7-1), 
         caTools (>= 1.18.2), caret (>= 6.0-93), survival (>= 3.4-0), 
         DOSE (>= 3.24.2), AnnotationDbi (>= 1.60.0), org.Hs.eg.db (>= 3.16.0),
         dplyr (>= 1.0.10), SummarizedExperiment (>= 1.28.0), grDevices, graphics, stats, utils
-Description: It is an easy-to-use GUI using disease information for detecting tumor/normal sample 
+Description: It is an easy-to-use GUI using disease information for detecting tumor/normal sample
     discriminating gene sets from differentially expressed genes. Our approach is based on an 
-    iterative algorithm filtering genes with disease ontology enrichment analysis and wilk’s lambda 
-    criterion connected to SVM classification model construction. Along with gene set extraction, 
-    SVMDO also provides individual prognostic marker detection. The algorithm is designed 
-    for FPKM and RPKM normalized RNA-Seq transcriptome datasets.    
-biocViews: GeneSetEnrichment, DifferentialExpression, GUI, Classification, RNASeq, Transcriptomics, Survival
-NeedsCompilation: no
-License: GPL-3
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
+    iterative algorithm filtering genes with disease ontology enrichment analysis and 
+    wilk and wilk’s lambda criterion connected to SVM classification model construction. 
+    Along with gene set extraction, SVMDO also provides individual prognostic marker detection. 
+    The algorithm is designed for FPKM and RPKM normalized RNA-Seq transcriptome datasets.
 RoxygenNote: 7.2.3
-Suggests: 
-    knitr,
-    rmarkdown,
-    testthat (>= 3.1.6),
-    BiocStyle
-VignetteBuilder: knitr
-Config/testthat/edition: 3
-BugReports: https://github.com/robogeno/SVMDO/issues
+Encoding: UTF-8
