--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SVMDO
 Title: Identification of Tumor-Discriminating mRNA Signatures via Support Vector Machines Supported by Disease Ontology
 Version: 1.3.0
-Date: 2024-01-03
+Date: 2024-01-05
 Authors@R: 
     c(person(given = "Mustafa Erhan",
 	family = "Ozer",
@@ -36,6 +36,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+	BiocStyle,
     knitr,
     rmarkdown,
     testthat (>= 3.1.6)
