--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ import(shiny)
 importFrom(AnnotationDbi,select)
 importFrom(BSDA,z.test)
 importFrom(DOSE,enrichDO)
+importFrom(DT,DTOutput)
+importFrom(DT,renderDT)
 importFrom(SummarizedExperiment,assay)
 importFrom(caTools,sample.split)
 importFrom(caret,confusionMatrix)
