--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SVMDO
 Title: Identification of Tumor-Discriminating mRNA Signatures via Support Vector Machines Supported by Disease Ontology
-Version: 1.5.1
-Date: 2024-08-26
+Version: 1.5.3
+Date: 2024-08-30
 Authors@R: 
     c(person(given = "Mustafa Erhan",
 	family = "Ozer",
@@ -20,21 +20,23 @@ Depends: R(>= 4.4), shiny (>= 1.7.4)
 Imports: shinyFiles (>= 0.9.3), shinytitle (>= 0.1.0), golem (>= 0.3.5),
         nortest (>= 1.0-4), e1071 (>= 1.7-12), BSDA (>= 1.2.1),
         data.table (>= 1.14.6), sjmisc (>= 2.8.9), klaR (>= 1.7-1), 
-        caTools (>= 1.18.2), caret (>= 6.0-93), survival (>= 3.4-0), 
+        caTools (>= 1.18.2), caret (>= 6.0-93), survival (>= 3.4-0), DT (>= 0.33.0),
         DOSE (>= 3.24.2), AnnotationDbi (>= 1.60.0), org.Hs.eg.db (>= 3.16.0),
         dplyr (>= 1.0.10), SummarizedExperiment (>= 1.28.0), grDevices, graphics, stats, utils
-Description: It is an easy-to-use GUI using disease information for detecting tumor/normal sample
-    discriminating gene sets from differentially expressed genes. Our approach is based on an 
-    iterative algorithm filtering genes with disease ontology enrichment analysis and 
-    wilk and wilk’s lambda criterion connected to SVM classification model construction. 
-    Along with gene set extraction, SVMDO also provides individual prognostic marker detection. 
-    The algorithm is designed for FPKM and RPKM normalized RNA-Seq transcriptome datasets.
+Description: It is an easy-to-use GUI using disease information for detecting 
+            tumor/normal sample discriminating gene sets from differentially 
+            expressed genes. Our approach is based on an iterative algorithm 
+            filtering genes with disease ontology enrichment analysis and wilk 
+            and wilk???s lambda criterion connected to SVM classification model 
+            construction. Along with gene set extraction, SVMDO also provides 
+            individual prognostic marker detection. The algorithm is designed 
+            for FPKM and RPKM normalized RNA-Seq transcriptome datasets. 
+RoxygenNote: 7.3.2
 biocViews: GeneSetEnrichment, DifferentialExpression, GUI, Classification, RNASeq, Transcriptomics, Survival
 NeedsCompilation: no
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
 Suggests: 
 	BiocStyle,
     knitr,
