--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SVMDO
 Title: Identification of Tumor-Discriminating mRNA Signatures via Support Vector Machines Supported by Disease Ontology
-Version: 1.4.6
-Date: 2024-26-30
+Version: 1.4.5
+Date: 2024-08-30
 Authors@R: 
     c(person(given = "Mustafa Erhan",
 	family = "Ozer",
@@ -27,7 +27,7 @@ Description: It is an easy-to-use GUI using disease information for detecting
             tumor/normal sample discriminating gene sets from differentially 
             expressed genes. Our approach is based on an iterative algorithm 
             filtering genes with disease ontology enrichment analysis and wilk 
-            and wilk???s lambda criterion connected to SVM classification model 
+            and wilks lambda criterion connected to SVM classification model 
             construction. Along with gene set extraction, SVMDO also provides 
             individual prognostic marker detection. The algorithm is designed 
             for FPKM and RPKM normalized RNA-Seq transcriptome datasets. 
